@@ -103,6 +103,12 @@ XDT_CHECK_PACKAGE([LIBXFCE4PANEL], [libxfce4panel-1.0], [4.10.0])
 XDT_CHECK_PACKAGE([XFCONF], [libxfconf-0], [4.10.0])
 
 dnl ***********************************
+dnl *** Check for optional packages ***
+dnl ***********************************
+XDT_CHECK_OPTIONAL_PACKAGE([KEYBINDER], [keybinder], [0.2.2], [keybinder],
+                           [keybinder Support])
+
+dnl ***********************************
 dnl *** Check for debugging support ***
 dnl ***********************************
 XDT_FEATURE_DEBUG(mixer_debug_default)
@@ -143,5 +149,6 @@ dnl ***************************
 echo
 echo "Build Configuration:"
 echo
+echo " * keybinder Support:                    ${KEYBINDER_FOUND:-no}"
 echo " * Debug Support:                        $enable_debug"
 echo
